Changed Readme file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Listing product</title>
+  <title>Product-preview-card-component</title>
   <link rel="stylesheet" href="output.css">   
 </head>
+
 <body class="bg-stone-100 h-auto flex flex-col items-center">
   <main class="w-10/12 flex flex-col justify-center my-20 bg-white rounded-md overflow-hidden sm:flex-row sm:w-110 sm:h-80">
     <img src="images/image-product-mobile.jpg" class="sm:hidden" alt="">
